syntax = "proto3";

option java_package = "com.example.testingproject";
option java_multiple_files = true;

message AppPreference {
  map<string, string> dataMessage = 1;
}